--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.4
 Deprecated==1.2.13
+dj-database-url==0.5.0
 Django==4.0.3
 django-cors-headers==3.13.0
 django-crispy-forms==1.14.0
@@ -28,6 +29,7 @@ lxml==4.8.0
 packaging==21.3
 ply==3.11
 prompt-toolkit==3.0.28
+psycopg2==2.9.3
 pyflakes==2.4.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
